Deleteted Sweet Alert

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "daisyui": "^2.51.6",
-        "leaflet": "^1.9.4"
+        "leaflet": "^1.9.4",
+        "sweetalert2": "^11.7.9"
     }
 }
