--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laraveldaily/laravel-permission-ui": "^0.1.4",
+        "realrashid/sweet-alert": "^7.0",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
