--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laraveldaily/laravel-permission-ui": "^0.1.4",
+        "maatwebsite/excel": "*",
+        "psr/simple-cache": "1.0",
         "realrashid/sweet-alert": "^7.0",
         "spatie/laravel-permission": "^5.10"
     },
